# embodied-chatbots

./: .gitignore  README.md  env.example  main.py  pyproject.toml
dataset/reoh/: all-scenarios.json  generate_scenarios.py  scenarios.jsonl
dataset/reoh/assets/: ontology.json  personas.json  personas_2.json  properties.json
dataset/reoh/scenarios/: scenario-0000-home-family-01-ae75f121-9b62-45a1-950e-8f03a589fd8d.json  scenario-0001-home-family-01-f4b2d2a9-6f79-4c35-b9d6-85f7f9d67cf5.json  scenario-0002-home-family-01-39fc6223-6fe5-44d7-a470-8aa71b5a00ea.json  scenario-0003-home-family-01-6bc013fa-6a5b-429e-baf9-5b3dbf519601.json  (+26 more)
reoh_bot/: README.md  __init__.py  app.py  arrival_gate.py  bot.py  config.py  daily_session.py  e2lg_agent.py  persona.py  persona_extractor.py  persona_processor.py  run-jetson.sh  run.sh  scenarios.py  sslg_agent.py
reoh_bot/prompts/: e2lg_system_prompt.md  persona_extractor_prompt.md  sslg_system_prompt.md
reoh_bot/tests/: test_arrival_gate.py  test_config.py  test_e2lg_agent.py  test_persona.py  test_persona_extractor.py  test_persona_processor.py  test_scenarios.py  test_sslg_agent.py
server/: README.md  __init__.py  app.py  bot.py  llm_factory.py  run-jetson.sh  run.sh
server/static/: app.js  index.html
server/tests/: test_llm_factory.py
smallwebrtc_bot/: README.md  app.py  bot.py  run-jetson.sh  run.sh
smallwebrtc_bot/tests/: test_llm_factory.py
tutorials/: 01-say-one-thing.py  02-llm-say-one-thing.py  05-speaking-state.py  06-voice-agent.py  07-function-calling.py  README.md
